# wms-backend

./: pyproject.toml
billings/: admin.py  models.py
billings/migrations/: 0001_initial.py  0002_alter_storagebilling_code_and_more.py
categories/: models.py  serializers.py  swagger.py  tests.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_sequence_number.py  0002_initial.py  0003_alter_category_billing_unit_and_more.py  0003_alter_category_sequence_number.py  0004_alter_category_sequence_number.py
common/: models.py
config/: settings.py  urls.py
handling_units/: admin.py  apps.py  models.py  urls.py
handling_units/migrations/: 0001_initial.py  0002_delete_sequencenumber.py  0002_initial.py  0003_historicalpallet_bin_location_pallet_bin_location.py  0003_remove_packagingunit_number_remove_pallet_number_and_more.py
inventories/: admin.py  models.py
inventories/migrations/: 0001_initial.py  0002_initial.py  0003_alter_inventorytransaction_created_by.py
operations/: admin.py  models.py
operations/migrations/: 0001_initial.py  0002_initial.py  0003_inspection_alter_historicalinbound_created_by_and_more.py
partners/: admin.py  models.py  serializers.py  swagger.py  tests.py  urls.py  views.py
partners/migrations/: 0001_initial.py  0002_carrier_created_at_carrier_created_by_and_more.py  0002_initial.py  (+5 more)
products/: models.py  serializers.py  tests.py  urls.py  views.py
settings/: models.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
warehouses/: admin.py  models.py
(+10 files in other folders)
